[project]
name = "comfyui_alikonfilms"
version = "1.0.2"
description = "A CLIP text encoder with 18 cinematic camera movement presets (dolly, pan, tilt, zoom, orbit and more). Subject-aware and free-camera modes, blend slider to mix your prompt with camera movements, and a live text output to preview the final prompt."
license = {text = "MIT"}

[project.urls]
Repository = "https://github.com/alikonfilms/comfyui_alikonfilms"

[tool.comfy]
PublisherId = "alikonfilms"
DisplayName = "comfyui-alikonfilms"
Icon = ""